--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="printBtn()">
 <div id="main">
     <div id="root">
-    <h1 class="category">Select a category<br> and <br>Start leraning English</h1>    
+    <h1 class="category">Select a category and Start leraning English</h1>    
     </div>
     <div id="root1">
         <div id="hangman">
